# TerminusDirectory

./: .dockerignore  .env.demo  .env.docker  .env.example  .env.production  .gitignore  ADVANCED_ANALYTICS_IMPLEMENTATION.md  COLLABORATIVE_FILTERING_IMPLEMENTATION.md  CONTENT_RECOMMENDER_IMPLEMENTATION.md  DATABASE_SETUP.md  DOCKER.md  Dockerfile  HYBRID_RECOMMENDER_IMPLEMENTATION.md  MOBILE_EDGE_IMPLEMENTATION.md  PRODUCTION_DATA_DEPLOYMENT_GUIDE.md  PRODUCTION_DATA_PIPELINE.md  PRODUCTION_DEPLOYMENT_AUTOMATION.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_ML_DEPLOYMENT_GUIDE.md  PRODUCTION_SETUP_COMPLETE.md  PRODUCTION_STARTUP_GUIDE.md  PRODUCTION_TRANSITION_GUIDE.md  PROPERTY_REPOSITORY_IMPLEMENTATION.md  README.md  SEARCH_SERVICE_IMPLEMENTATION.md  access_info.py  debug_database.py  demo-quick-start.sh  docker-compose.dev.yml  docker-compose.yml  integration_test.py  main_demo.py  main_production.py  pyproject.toml  pytest.ini  quick_test.py  requirements_search_ranker.txt  setup_data_ingestion.py  setup_database.py  setup_production.py  (+16 more)
.github/workflows/: ci-cd-pipeline.yml  ci-cd-production.yml  infrastructure-drift-detection.yml  ml-training-pipeline.yml  security-scanning.yml
config/: nginx-default.conf  nginx.conf  pgadmin-servers.json  prometheus.yml  redis.conf
config/database/: connection_manager.py  pgbouncer.ini  postgresql-production.conf  production.yaml
config/monitoring/: production-monitoring.yaml
config/monitoring/alerts/: data-pipeline-alerts.yml
config/redis/: cluster_manager.py  docker-compose-redis-cluster.yml  redis-cluster.conf  redis-sentinel.conf  setup-cluster.sh
database/optimization/: maintenance_scheduler.py  partition_manager.py  performance_optimizer.py
database/security/: compliance_manager.py  security_manager.py
database/seeds/: production_data_seeder.py  seeding_cli.py
deployment/kubernetes/: 01-resource-quota.yaml  02-configmaps.yaml  03-secrets.yaml  04-storage.yaml  05-postgres-deployment.yaml  06-redis-deployment.yaml  07-app-deployment.yaml  08-worker-deployment.yaml  09-scheduler-deployment.yaml  10-nginx-deployment.yaml  11-prometheus-deployment.yaml  12-services.yaml  13-ingress.yaml
deployment/scripts/: blue-green-deploy.py  canary-deploy.py  health-checks.py
docker/: Dockerfile.api  Dockerfile.ml-training  Dockerfile.scraping
docker/config/haproxy/: haproxy.cfg
docs/: ML_TRAINING_PIPELINE.md  collaborative_filtering.md  masterplan.md  ml_model_repository.md  scraping_router_documentation.md
docs/diagrams/: .domain_entities_diagram.md.swp  domain_entities_diagram.md  ml_models_architecture.md  recommendation_flow_diagram.md  search_ranking_flow.md  system_architecture.md
docs/performance/: monitoring_setup_guide.md  performance_optimization_guide.md
docs/pseudocode/: domain_entities.md  domain_repositories.md  domain_services.md  hybrid_recommender_pseudocode.md  ml_models.md  search_ranking_pseudocode.md
examples/: collaborative_filtering_example.py  hybrid_recommender_example.py  production_ml_example.py  production_ml_training_example.py
frontend/pwa/: vite.config.ts
infrastructure/aws/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/azure/: main.tf  outputs.tf  variables.tf
infrastructure/gcp/: main.tf
k8s/: 01-namespace.yaml  02-rbac.yaml  03-configmaps.yaml  04-secrets.yaml  05-storage.yaml  06-postgres-deployment.yaml  07-redis-deployment.yaml  08-app-deployment.yaml  09-worker-deployment.yaml  10-scheduler-deployment.yaml  11-services.yaml  12-ingress.yaml  13-hpa.yaml  14-network-policies.yaml  README.md
k8s/monitoring/: grafana-deployment.yaml  prometheus-deployment.yaml
k8s/production/: 00-namespace.yaml  01-service-mesh-istio.yaml  03-storage-pvc.yaml  04-database-statefulset.yaml  service-mesh-istio.yaml
k8s/scripts/: deploy.sh  health-check.sh
migrations/: 001_initial_schema.sql  002_sample_data.sql  003_analytics_schema.sql  004_user_interactions_constraint.sql  005_ml_prediction_cache.sql  run_migrations.py
migrations/production/: config.yaml  migration_cli.py  migration_framework.py
mlops/: __init__.py  mlflow_manager.py
monitoring/production/: grafana-values.yaml  jaeger-values.yaml  prometheus-values.yaml
monitoring/prometheus/: prometheus.yml
ops/: backup-restore.py  disaster-recovery-automation.py
optimizations/: database_optimizer.py  ml_optimizer.py
requirements/: README.md  base.txt  dev.txt  prod.txt
scripts/: backup_database.py  data_ingestion_pipeline.py  data_management_utilities.py  database_monitoring.py  docker-entrypoint.sh  enable_pg_extensions.sql  init-db-dev.sql  init-db.sql  init_database.py  ml-training-entrypoint.sh  production_data_seeder.py  run_tests.py  scraping-entrypoint.sh  seed-dev-data.sql  test_data_operations.py  test_database_connection.py
security/: backup-disaster-recovery.yaml
security/compliance/: gdpr-compliance.yaml
security/policies/: network-policies.yaml  security-policies.yaml
src/security/: __init__.py  config.py  security_manager.py
terraform/aws/: main.tf  outputs.tf  variables.tf
tests/: README.md  conftest.py  test_collaborative_filter.py
tests/integration/: test_ml_training_pipeline.py
tests/performance/: __init__.py  test_ml_performance.py
tests/scalability/: scalability_test_runner.py
tests/utils/: __init__.py  data_factories.py  test_helpers.py
validation/: validate_collaborative_filter.py
(+210 files in other folders)
